# bevy_fps

./: Cargo.toml
