[package]
name = "bevy_fps"
version = "0.1.0"
edition = "2021"
description = "A fist person shooter plugin for bevy"
license = "MIT"
homepage = "https://github.com/ka-de/bevy_fps"
repository = "https://github.com/ka-de/bevy_fps"
keywords = ["gamedev", "bevy", "rapier"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_rapier3d = { version = "0.26.0", features = ["simd-stable", "parallel"] }
